# Squire

./: .env.sample  .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  build_omega.sh  color_state.json  config.sample.json  deploy-commands.js  eslint.config.js  index.js  package-lock.json  package.json  squire.db  squire.db.json  squirectl  tsconfig.json  wipe-commands.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-on-merge.yml
assets/: squire_ascii.txt
bard/: AGENTS.md  Cargo.toml  README.md
bard/python/: __init__.py  main.py
bard/rust/: discord_gateway.rs
bard/src/: main.rs
ecosystem/: AGENTS.md  Cargo.toml  README.md  TODO.md
ecosystem/Discovery/sentry/: Cargo.toml  README.md
ecosystem/Discovery/sentry/rust/: discord_gateway.rs
mcp/: internal-api.mjs
releases/: README.md
rust/: Cargo.toml
rust/src/: config.rs  lib.rs  main.rs
rust/src/crypto/: integrity.rs  mod.rs  passwords.rs  secrets.rs
scripts/: commands-sync.sh  export-bard-modules.mjs  render-config.mjs  spotify-refresh-token.mjs  youtube-refresh-token.mjs
security/: ip-access-log.md
sentry/: AGENTS.md  README.md  TODO.md
squire/: AGENTS.md  README.md
src/: config.rs  index.js  integrity.rs  main.rs
tests/: auto-bouncer.test.js  config.test.js  experience-config.test.js  global-ban.test.js  logging-forwarder.test.js  moderation-commands.test.js  moderation-logging.test.js  playlists.test.js  project-liner.test.js  rainbow-bridge.test.js  setup-panel.test.js  spotlight-gallery.test.js  welcome-cards-autoban.test.js  welcome-template.test.js
(+87 files in other folders)
