[package]
name = "squire-rs"
version = "0.1.0"
edition = "2021"
description = "Rust rewrite of Squire secret handling and crypto utilities"
authors = ["Squire maintainers"]
license = "GPL-3.0-or-later"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.21"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hkdf = "0.12"
hmac = "0.12"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
zeroize = "1"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
