[package]
name = "sentry-omega"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
blue = []

[lib]
name = "sentry_omega"
path = "src/lib.rs"

[[bin]]
name = "sentry-omega"
path = "src/bin/sentry-omega.rs"

[[bin]]
name = "sentry-yellow"
path = "src/bin/sentry-yellow.rs"

[[bin]]
name = "sentry-red"
path = "src/bin/sentry-red.rs"

[[bin]]
name = "sentry-blue"
path = "src/bin/sentry-blue.rs"
required-features = ["blue"]
